[metadata]
name = python-xmltv
version = attr: xmltv.xmltv.VERSION
description = A Python Module for Reading and Writing XMLTV Files
long_description =
    This module provides a simple python API for reading and writing
    XMLTV files. XMLTV is an XML format for storing TV listings.

    More information on XMLTV can be found at http://membled.com/work/apps/xmltv/
author = James Oakley
author_email = jfunk@funktronics.ca
url = https://github.com/dcesari/python-xmltv
license = LGPL-3.0+
py_modules =
    xmltv
packages =
    python-xmltv
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
packages = find:

[options.package_data]
* = *.txt, *.md

[options.entry_points]
console_scripts =
    xmltvtool = xmltv.xmltvtool:main

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
